--- a/composer.json
+++ b/composer.json
@@ -12,14 +12,16 @@
   ],
   "require": {
     "php": ">=5.3.9",
-    "symfony/form": "~2.8|~3.0",
-    "symfony/validator": "~2.3|~3.0"
+    "symfony/form": "~2.8|~3",
+    "symfony/validator": "~2.3|~3"
   },
   "require-dev": {
     "phpunit/phpunit": "^5",
     "dcs/user-core-bundle": "~1.0@dev",
     "dcs/password-reset-core-bundle": "~1.0@dev",
-    "symfony/framework-bundle": "~2.8|~3.0"
+    "symfony/framework-bundle": "~2.8|~3",
+    "satooshi/php-coveralls": "~1.0",
+    "phpunit/phpcov": "3.*"
   },
   "autoload": {
     "psr-4": {
