--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -6,16 +6,16 @@
             <directory>tests</directory>
         </testsuite>
     </testsuites>
-
     <filter>
-        <whitelist>
-            <directory>./src</directory>
+        <whitelist processUncoveredFilesFromWhitelist="true">
+            <directory suffix=".php">src</directory>
             <exclude>
-                <directory>./src/DependencyInjection</directory>
-                <directory>./tests</directory>
-                <directory>./vendor</directory>
+                <directory>./src/Controller</directory>
             </exclude>
         </whitelist>
     </filter>
+    <logging>
+        <log type="coverage-clover" target="build/logs/clover.xml"/>
+    </logging>
 </phpunit>
 
