Add symfony/security package to require-dev option

--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     "dcs/user-core-bundle": "~1.0@dev",
     "dcs/password-reset-core-bundle": "~1.0@dev",
     "symfony/framework-bundle": "~2.8|~3",
+    "symfony/security": "~2.8|~3.0",
     "satooshi/php-coveralls": "~1.0",
     "phpunit/phpcov": "3.*"
   },
